# sdk-protobuf

./: CMakeLists.txt  LICENSE  README.md  Tdata.cpp  Tdata.h  error_define.h  gen_version_info.sh  main.cpp  main.h  make_depend.sh  utils.cmake
ca/: ca.cpp  ca.h  ca_algorithm.h  ca_global.h  ca_handle_event.cpp  ca_handle_event.h  ca_transaction.cpp  ca_transaction.h  ca_txhelper.cpp  ca_txhelper.h  jcAPI.cpp  jcAPI.h
common/: global.h  global_data.cpp  global_data.h
include/: ScopeGuard.h  Types.h  readme  type.h
net/: connect.h  debug.h  define.h  dispatcher.cpp  dispatcher.h  ip_port.cpp  ip_port.h  message_queue.h  net_api.cpp  net_api.h
proto/: interface.pb.cc  interface.pb.h
proto/src/: block.proto  ca_protomsg.proto  common.proto  interface.proto  net.proto  sdk.proto  sync_block.proto
tools/: cp_protoc.sh
utils/: Cycliclist.hpp  EDManager.cpp  EDManager.h  ErrorMessage.cpp  ErrorMessage.h  MagicSingleton.h  VRF.hpp  VxDType.h  VxNtpHelper.cpp  VxNtpHelper.h  base58.cpp  base58.h  bip39.cpp  compress.cpp  console.h  debug.h  hexcode.cpp  highPrecision.cpp  highPrecision.h  pbkdf2.cpp  single.hpp  time_util.cpp  time_util.h  tmplog.cpp  tmplog.h  util.cpp  util.h  uuid4.cpp  uuid4.h
